# myagent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: implementation-validator.md
.claude/skills/architecture-design/: guide.md  template.md
.claude/skills/development-guidelines/: template.md
.claude/skills/functional-design/: guide.md  template.md
.claude/skills/glossary-creation/: guide.md
.claude/skills/repository-structure/: guide.md  template.md
.devcontainer/: devcontainer.json
docs/: MANUAL.md  architecture.md  development-guidelines.md  functional-design.md  glossary.md  product-requirements.md  repository-structure.md
docs/ideas/: idea2.md
docs/references/: ImprovementOfAIAgent.md  claude-code-vs-myagent-workflow-analysis.md  how_to_search_web.md  myagent-harness-improvement-plan.md
src/: example.py
src/myagent/: __init__.py  main.py
src/myagent/agent/: __init__.py  critic.py  events.py  executor.py  graph.py  metrics.py  orchestrator.py  planner.py  prompt_manager.py  state.py  tool_validator.py
src/myagent/cli/: app.py  commands.py  display.py  slash_router.py
src/myagent/commands/: __init__.py  loader.py  manager.py  models.py
src/myagent/infra/: config.py  context.py  errors.py
src/myagent/llm/: cost.py  router.py
src/myagent/plugins/: __init__.py  installer.py  loader.py  manager.py  models.py
src/myagent/skills/: __init__.py  installer.py  loader.py  manager.py  models.py  skill_tool.py
src/myagent/tools/: file_tools.py  mcp_tools.py  path_security.py  registry.py  (+3 more)
tests/: test_example.py
(+44 files in other folders)
