[project]
name = "myagent"
version = "0.1.0"
description = "CLI AI coding agent powered by LangGraph with OpenAI/Gemini support"
requires-python = ">=3.12"
keywords = ["ai-agent", "cli", "langgraph", "coding-assistant"]
license = { text = "MIT" }
dependencies = [
    "langgraph>=1.0",
    "langchain-core>=1.0",
    "langchain-openai>=1.0",
    "langchain-google-genai>=2.1",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "click>=8.0",
    "pydantic>=2.0",
    "tomli-w>=1.0",
    "python-dotenv>=1.2.2",
    "pypdf>=6.0",
]

[project.scripts]
myagent = "myagent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myagent"]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N801", "N802", "ANN", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["myagent"]
explicit_package_bases = true
